# Agentic_AI

./: .gitignore
crewai_Agentic_AI/: .env  BusinessAnalyst_Agent.py  MarketAnalyst_Agent.py  StakeholderAgent.py  Stakeholder_Agent.py  __main__.py  agent_executor.py  agile_project_manager.py  brd_final.md  business_analyst_domain_expert.py  index.html  product_manager.py  pyproject.toml  requirements.txt  web_app.py
crewai_Agentic_AI/memory/: chroma.sqlite3  long_term_memory.db
crewai_Agentic_AI/output/: business_requirements.md  business_requirements_document.md  market_analysis_report.md  product_roadmap.md  project_vision_document.md  sprint_plan.md  stakeholder_brief.md  stakeholder_document.md
crewai_Agentic_AI/server/: Rag_tools.py  search_tools.py  stakeholder_tools.py
crewai_Agentic_AI/tools/: md_to_pdf.py  multimodal_tools.py
crewai_Agentic_AI/uploads/: GMI Jira Introduction 2025 (1) (1).pptx
host_agent/: pyproject.toml
host_agent/host/: .env  __init__.py  agent.py  remote_agent_connection.py
